<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/color_grey"
    android:visibility="visible" >
    <EditText
        android:id="@+id/et_panel_amt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-25dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/et_panel_amt_hint"
        android:inputType="numberDecimal"
        android:lineSpacingMultiplier="0.8"
        android:saveEnabled="true"
        android:soundEffectsEnabled="false"
        android:textColor="@android:color/black"
        android:textSize="40dp" />
    <EditText
        android:id="@+id/et_panel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_panel_amt"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_panel_label_hint"
        android:inputType="textAutoCorrect"
        android:paddingBottom="10dp"
        android:saveEnabled="true"
        android:scrollbars="none"
        android:singleLine="true"
        android:soundEffectsEnabled="false"
        android:textColor="@android:color/black" />
    <ImageButton
        android:id="@+id/btn_panel_enter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/rl_panel"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@id/et_panel_label"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:padding="8dp"
        android:src="@drawable/accept" />
    <ImageButton
        android:id="@+id/btn_panel_cancel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/btn_panel_enter"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_panel_enter"
        android:layout_marginTop="3dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:padding="8dp"
        android:src="@drawable/delete" />
    <TextView
        android:id="@+id/tv_panel_amtsign"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/btn_panel_enter"
        android:layout_margin="0dp"
        android:layout_toLeftOf="@+id/et_panel_amt"
        android:clickable="false"
        android:hint="@string/amt_sign_hint"
        android:paddingTop="7.5dp"
        android:textSize="30dp" />
</RelativeLayout>