<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:hint="@string/tv_total_hint"
        android:includeFontPadding="true"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textIsSelectable="true"
        android:textSize="50dp" />
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_add"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_total"
        android:clickable="true"
        android:divider="#00000000"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:overScrollMode="never"
        android:scrollbars="none" >
        <!-- Preview: listitem=@layout/item -->
    </ListView>
    <Space
        android:id="@+id/sp_border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@id/btn_add"
        android:layout_centerHorizontal="true" />
    <ImageButton
        android:id="@id/btn_add"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_toLeftOf="@id/sp_border"
        android:background="@color/color_grey"
        android:contentDescription="@string/btn_add_cd"
        android:onClick="onClick"
        android:padding="3dp"
        android:paddingLeft="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/plus" />
    <ImageButton
        android:id="@+id/btn_sub"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/sp_border"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@android:id/list"
        android:layout_marginRight="50dp"
        android:layout_toRightOf="@id/tv_total"
        android:background="@color/color_grey"
        android:contentDescription="@string/btn_sub_cd"
        android:onClick="onClick"
        android:padding="3dp"
        android:scaleType="centerInside"
        android:src="@drawable/minus" />
    <ImageButton
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/color_grey"
        android:contentDescription="@string/btn_sub_cd"
        android:onClick="onClick"
        android:paddingBottom="7.5dp"
        android:paddingTop="1dp"
        android:scaleType="fitCenter"
        android:src="@drawable/three_dots" />
    <ImageButton
        android:id="@+id/fill"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@android:id/list"
        android:background="@color/color_grey"
        android:clickable="false"
        android:contentDescription="@string/btn_menu_cd"
        android:padding="1dp"
        android:scaleType="fitCenter" />
</RelativeLayout>